2007-11-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.[ch]: Fix the declaration of the
	class handlers for the ::captured-event, ::enter-event and
	::leave-event signals; the function signatures were missing
	the return value the signals marshallers were expecting, and
	their names weren't respecting the convention for event-related
	signals.

2007-11-06  Tomas Frydrych  <tf@o-hand.com>

        * clutter/clutter-fixed.h:
	Added CLUTTER_SQRTI_ARG_MAX, CLUTTER_SQRTI_5_PERCENT,
	CLUTTER_SQRTI_10_PERCENT expressing clutter_sqrti limits.
	Stripped trailing whitespace.

        * clutter/clutter-fixed.c:
	(clutter_sqrti):
	Updated documentation, stripped trailing whitespace.

        * clutter/clutter-behaviour-path.c:
	(node_distance):
	Use clib sqrt if clutter_sqrti() precission would be worse than
	10%.
	Stripped trailing whitespace.

2007-11-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-layout.h: Add commodity macros to test for
	a specific layout flag in one line.

2007-11-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-box.c (clutter_box_dispose): Call unparent()
	on the children, instead of destroy(), to avoid a double free
	and a crash when destroying a ClutterBox.

2007-11-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-label.c: Break the references in ::dispose,
	and free the resources in ::finalize.

2007-11-05  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-container.[ch]: removed find_child_by_id method
	from interface (and all implementations of it) since this
	functionality is now implemented using a global hash.
	* clutter/clutter-box.c:
	* clutter/clutter-group.c:

2007-11-01  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.c: Do not keep ownership of the
	pixbufs we load.

2007-10-31  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-main.c: (_clutter_do_pick): disable dithering
	when painting in pick mode.
